--- a/src/app/scene/auth/reset-password/reset-password.component.html
+++ b/src/app/scene/auth/reset-password/reset-password.component.html
@@ -19,8 +19,8 @@
                     <button class="btn btn-primary btn-block" id="code">Get Code</button>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="chk1">
-                    <label class="form-check-label" for="chk1"></label>
+<!--                    <input type="checkbox" class="form-check-input" id="chk1">-->
+<!--                    <label class="form-check-label" for="chk1"></label>-->
                     <a routerLink="/login" class="forgot-password">Login</a>
                 </div>
                 <ngx-spinner *ngIf="isLogged" bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#f8640b" type="square-jelly-box" [fullScreen]="true">
