--- a/src/app/commun-shared/modal/user-logged/user-logged.component.html
+++ b/src/app/commun-shared/modal/user-logged/user-logged.component.html
@@ -2,7 +2,7 @@
     <!-- Content Header (Page header) -->
     <div class="container-fluid">
         <br/>
-        <div class="row" *ngIf="employee" id="user-profile">
+        <div *ngIf="employee" class="row" id="user-profile">
             <div class="col-lg-3 col-md-4 col-sm-4">
                 <div class="main-box clearfix">
                     <div class="card">
@@ -13,6 +13,7 @@
                                         [src]="hostPhoto + employee.user_id"
                                         alt="Admin"
                                         class="rounded-circle p-1"
+                                        id="profile-picture"
                                         width="130"
                                 />
                                 <img
@@ -20,22 +21,24 @@
                                         [src]="url"
                                         alt="Admin"
                                         class="rounded-circle p-1"
+                                        id="alt-profile-picture"
                                         width="130"
                                 />
 
                                 <div class="parent-div">
                                     <button class="btn-upload">
-                                        <a style="color: #f88538" class="editImage">
+                                        <a class="editImage" style="color: #f88538">
                                             <i class="fa fa-camera"></i>
                                         </a>
                                     </button>
                                     <input
-                                            type="file"
-                                            name="upfile"
-                                            accept="image/*"
                                             (change)="onSelectedFile($event)"
+                                            accept="image/*"
+                                            name="upfile"
+                                            type="file"
                                     />
                                 </div>
+
 
                                 <div class="mt-3">
                                     <h4 style="color: #f88538">
@@ -70,13 +73,13 @@
                                                 </div>
 
                                                 <progress-bar
-                                                        [progress]="t.value"
                                                         [color-degraded]="{
                             '20': '#dc3545',
                             '30': '#ffc107',
                             '40': '#17a2b8',
                             '60': '#28a745'
                           }"
+                                                        [progress]="t.value"
                                                 >
                                                 </progress-bar>
                                             </div>
@@ -96,8 +99,8 @@
                             <div class="profile-header">
                                 <a
                                         (click)="gotoChangeModel()"
-                                        style="color: #ffff"
                                         class="btn btn-sm edit-profile"
+                                        style="color: #ffff"
                                 >
                                     <i class="fa fa-pencil-square fa-lg"></i> Edit profile
                                 </a>
@@ -195,11 +198,11 @@
                         <ul class="nav nav-tabs">
                             <li class="nav-item">
                                 <button
-                                        class="nav-link active"
-                                        href="#tab-activity"
-                                        data-toggle="tab"
-                                        data-bs-target="#tab-activity"
                                         aria-selected="true"
+                                        class="nav-link active"
+                                        data-bs-target="#tab-activity"
+                                        data-toggle="tab"
+                                        href="#tab-activity"
                                 >
                                     Skills
                                 </button>
@@ -207,10 +210,10 @@
 
                             <li class="nav-item">
                                 <button
-                                        class="nav-link"
-                                        href="#tab-files"
-                                        data-toggle="tab"
                                         aria-selected="false"
+                                        class="nav-link"
+                                        data-toggle="tab"
+                                        href="#tab-files"
                                 >
                                     files
                                 </button>
@@ -222,8 +225,8 @@
                                 <div class="profile-header">
                                     <a
                                             (click)="showSkillForm()"
-                                            style="color: #ffff"
                                             class="btn btn-sm edit-profile"
+                                            style="color: #ffff"
                                     >
                                         <i class="fas fa-graduation-cap"></i>Add Skill
                                     </a>
@@ -231,21 +234,21 @@
                                 <br/>
                                 <hr/>
                                 <form
+                                        (ngSubmit)="onSubmit()"
                                         *ngIf="shown"
                                         [formGroup]="addSkillForm"
-                                        (ngSubmit)="onSubmit()"
                                 >
                                     <div class="form-row">
                                         <div class="form-group col-md-8">
                                             <label for="inputpassportNumber">Skill : </label>
                                             <input
-                                                    type="text"
-                                                    formControlName="roleLabel"
-                                                    class="form-control"
-                                                    id="inputpassportNumber"
                                                     [ngClass]="{
                           'is-invalid': submitted && f.roleLabel.errors
                         }"
+                                                    class="form-control"
+                                                    formControlName="roleLabel"
+                                                    id="inputpassportNumber"
+                                                    type="text"
                                             />
                                             <div
                                                     *ngIf="submitted && f.roleLabel.errors"
@@ -259,13 +262,13 @@
                                         <div class="form-group col-md-2">
                                             <label for="inputState5">Percentage : </label>
                                             <input
-                                                    type="text"
-                                                    formControlName="eval"
-                                                    class="form-control"
-                                                    min="0"
-                                                    max="100"
-                                                    id="inputpassportNumber"
                                                     [ngClass]="{ 'is-invalid': submitted && f.eval.errors }"
+                                                    class="form-control"
+                                                    formControlName="eval"
+                                                    id="inputpassportNumber"
+                                                    max="100"
+                                                    min="0"
+                                                    type="text"
                                             />
                                             <div
                                                     *ngIf="submitted && f.eval.errors"
@@ -278,7 +281,7 @@
                                         </div>
                                         <div class="form-group col-md-2">
                                             <label style="color: #fff">&nbsp; </label> <br/>
-                                            <button type="submit" class="btn btn-sm">
+                                            <button class="btn btn-sm" type="submit">
                                                 Save Skill
                                             </button>
                                         </div>
@@ -302,13 +305,13 @@
                                                 </div>
 
                                                 <progress-bar
-                                                        [progress]="skill.eval"
                                                         [color-degraded]="{
                             '20': '#dc3545',
                             '30': '#ffc107',
                             '40': '#17a2b8',
                             '60': '#28a745'
                           }"
+                                                        [progress]="skill.eval"
                                                 >
                                                 </progress-bar>
                                             </div>
@@ -321,9 +324,9 @@
                                 <app-user-file [LoggedEmployee]="employee"></app-user-file>
                             </div>
 
-                            <!-- <div class="tab-pane fade" id="tab-chat">
+<!--                            &lt;!&ndash; <div class="tab-pane fade" id="tab-chat">-->
 
-                                          </div>-->
+<!--                                          </div>&ndash;&gt;-->
                         </div>
                     </div>
                 </div>
