--- a/src/app/scene/auth/login/login.component.html
+++ b/src/app/scene/auth/login/login.component.html
@@ -25,9 +25,9 @@
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="rememberMe">
                     <label class="form-check-label" for="rememberMe">Remember me</label>
-                    <a routerLink="/reset" class="forgot-password">Forgot Password?</a>
+                    <a routerLink="/reset" class="forgot-password" id="forgot-password">Forgot Password?</a>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <button type="submit" id="loginButton" class="btn btn-primary btn-block">Login</button>
             </form>
         </div>
 <!--        <div class="login-footer">-->
