--- a/src/app/scene/home/team/team-detail/team-detail.component.html
+++ b/src/app/scene/home/team/team-detail/team-detail.component.html
@@ -11,8 +11,8 @@
                             <div class="d-flex flex-column align-items-center text-center">
                                 <img
                                         *ngIf="
-                    authService.isManager() || authService.isProjectLeader()
-                  "
+                        authService.isManager() || authService.isProjectLeader()
+                      "
                                         [src]="hostPhoto + team?.leader.user.user_id"
                                         alt="Admin"
                                         class="rounded-circle p-1"
@@ -120,7 +120,7 @@
                                 <i class="nav-icon fas fa-edit"></i
                                 ><strong class="text-muted"> &nbsp; &nbsp; Tasks</strong>
                             </div>
-                            <div (click)="addTask(team.id)" class="pointerr" class="mb-1">
+                            <div (click)="addTask(team.id)" class="pointerr mb-1">
                                 <i class="fas fa-list-alt"></i
                                 ><strong class="text-muted"> &nbsp; &nbsp; Add tasks</strong>
                             </div>
@@ -128,8 +128,7 @@
                             <div
                                     (click)="RedirectToRoom()"
                                     *ngIf="authService.isLeader()"
-                                    class="nav-item pointerr"
-                                    class="mb-1"
+                                    class="nav-item pointerr mb-1"
                             >
                                 <i class="fas fa-comment-alt"></i> &nbsp; &nbsp;<strong
                                     class="text-muted"
@@ -235,8 +234,8 @@
                                             <mat-select
                                                     (click)="getListMember()"
                                                     [ngClass]="{
-                          'is-invalid': submitted && f.idmembers.errors
-                        }"
+                              'is-invalid': submitted && f.idmembers.errors
+                            }"
                                                     class="form-control"
                                                     class="form-control"
                                                     formControlName="idmembers"
@@ -305,7 +304,7 @@
                                                 <div class="avatar-image avatar-image--loaded">
                                                     <div class="avatar avatar--md avatar-image__image">
                                                         <div class="avatar__content">
-                                                            <img [src]="hostPhoto + member.user.user_id"/>
+                                                            <img [src]="hostPhoto + member.user?.user_id"/>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -313,9 +312,9 @@
 
                                             <div
                                                     *ngIf="
-                          authService.isManager() ||
-                          authService.isProjectLeader()
-                        "
+                              authService.isManager() ||
+                              authService.isProjectLeader()
+                            "
                                                     class="media-body"
                                             >
                                                 <div (click)="goToTask(member.id)" class="mt-0">
