--- a/src/app/scene/home/team/weekly-dashboard/weekly-dashboard.component.html
+++ b/src/app/scene/home/team/weekly-dashboard/weekly-dashboard.component.html
@@ -1,22 +1,32 @@
-<form [formGroup]="DashboardForm" (ngSubmit)="onSubmit()">
-  <div>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <label for="month">Select Month? </label>
-    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <input id="month" type="month" name="month" min="currentDate"
-      max="2025-12-31" required pattern="[0-9]{4}-[0-9]{2}" formControlName="weekDate" 
-      [ngClass]="{ 'is-invalid': submitted && f.weekDate.errors }">
-      &nbsp; &nbsp;  <button class="btn btn-sm float right ">Search</button>
+<form (ngSubmit)="onSubmit()" [formGroup]="DashboardForm">
+    <div>
+        <label for="month">Select Month? </label>
+        <input [ngClass]="{ 'is-invalid': submitted && f.weekDate.errors }" formControlName="weekDate" id="month"
+               max="2025-12-31"
+               min="currentDate" name="month" pattern="[0-9]{4}-[0-9]{2}"
+               required
+               type="month">
 
-      <div *ngIf="submitted && f.weekDate.errors" class="invalid-feedback">
-      <div *ngIf="f.weekDate.errors.required">enter from date</div>
+        <button class="btn btn-sm float right ">Search</button>
 
-      
+        <div *ngIf="submitted && f.weekDate.errors" class="invalid-feedback">
+            <div *ngIf="f.weekDate.errors.required">enter from date</div>
+
+
+        </div>
+
     </div>
-  
-  </div>
 </form>
-<ngx-charts-bar-vertical-stacked [results]="statWeekList" [view]="view" [scheme]="colorScheme" [schemeType]="schemeType"
-  [gradient]="gradient" [xAxis]="xAxis" [yAxis]="yAxis" [legend]="legend" [showXAxisLabel]="showXAxisLabel"
-  [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [legendTitle]="legendTitleMulti"
-  [legendPosition]="legendPosition" [animations]="animations" [showGridLines]="showGridLines"
-  [showDataLabel]="showDataLabel" [barPadding]="barPadding" [tooltipDisabled]="tooltipDisabled">
+<ngx-charts-bar-vertical-stacked [animations]="animations" [barPadding]="barPadding" [gradient]="gradient"
+                                 [legendPosition]="legendPosition"
+                                 [legendTitle]="legendTitleMulti" [legend]="legend" [results]="statWeekList"
+                                 [schemeType]="schemeType"
+                                 [scheme]="colorScheme"
+                                 [showDataLabel]="showDataLabel" [showGridLines]="showGridLines"
+                                 [showXAxisLabel]="showXAxisLabel"
+                                 [showYAxisLabel]="showYAxisLabel"
+                                 [tooltipDisabled]="tooltipDisabled" [view]="view"
+                                 [xAxisLabel]="xAxisLabel"
+                                 [xAxis]="xAxis" [yAxisLabel]="yAxisLabel"
+                                 [yAxis]="yAxis">
 </ngx-charts-bar-vertical-stacked>
